implement neon api fetch

--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,4 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dXAtYm9uZWZpc2gtOTQuY2xlcmsuYWNjb3VudHMuZGV2JA
+NEON_URL=postgresql://uber-clone-db1_owner:dNU6lQ1escbq@ep-still-term-a1kj5w20.ap-southeast-1.aws.neon.tech/uber-clone-db1?sslmode=require
+
+EXPO_PUBLIC_SERVER_URL=https://uber-clone.com/
