--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,5 @@ EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_dXAtYm9uZWZpc2gtOTQuY2xlcmsuYWNjb3VudH
 NEON_URL=postgresql://uber-clone-db1_owner:dNU6lQ1escbq@ep-still-term-a1kj5w20.ap-southeast-1.aws.neon.tech/uber-clone-db1?sslmode=require
 
 EXPO_PUBLIC_SERVER_URL=https://uber-clone.com/
+
+EXPO_PUBLIC_GEOAPIFY_API_KEY=e13d16d46da34f318365b5b4d3c011b7
