implement home and olaMaps autocomplete

--- a/.env.local
+++ b/.env.local
@@ -4,3 +4,9 @@ NEON_URL=postgresql://uber-clone-db1_owner:dNU6lQ1escbq@ep-still-term-a1kj5w20.a
 EXPO_PUBLIC_SERVER_URL=https://uber-clone.com/
 
 EXPO_PUBLIC_GEOAPIFY_API_KEY=e13d16d46da34f318365b5b4d3c011b7
+EXPO_PUBLIC_GOOGLE_API_KEY=AIzaSyCRiS0g05CiDwIKP42jctgGXZlZF0wpaz4
+
+EXPO_PUBLIC_OLA_MAPS_PROJECT_ID=d5e5f645-438b-4b7f-b3bb-d24cd174fe74
+EXPO_PUBLIC_OLA_MAPS_API_KEY=QeuHUmJlZ9mwAe9XWl7H4eCix3g8v4wpf5X34TPE
+EXPO_PUBLIC_OLA_MAPS_CLIENT_ID=321aa093-9f6a-445d-bd98-a8c99e9f42d3
+EXPO_PUBLIC_OLA_MAPS_CLIENT_SECRET=GRAX44T9106d4Z5k6eI2kqbFfuNPaPUE
