--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@neondatabase/serverless": "^0.9.4",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/flash-list": "1.6.4",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "eslint-config-universe": "^13.0.0",
@@ -27,12 +28,14 @@
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
+    "expo-location": "^17.0.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "ldrs": "^1.0.2",
     "nativewind": "^2.0.11",
     "pgshims": "github:neondatabase/serverless",
     "react": "18.2.0",
@@ -40,6 +43,9 @@
     "react-native": "0.74.5",
     "react-native-crypto": "^2.2.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.18.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "~3.10.1",
@@ -47,7 +53,7 @@
     "react-native-screens": "3.31.1",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
-    "@shopify/flash-list": "1.6.4"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
