--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@neondatabase/serverless": "^0.9.4",
     "@react-navigation/native": "^6.0.2",
     "@shopify/flash-list": "1.6.4",
+    "@stripe/stripe-react-native": "^0.38.4",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "eslint-config-universe": "^13.0.0",
@@ -54,6 +55,7 @@
     "react-native-screens": "3.31.1",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
+    "stripe": "^16.8.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
